--- a/Investigate_Image/templates/gallery.html
+++ b/Investigate_Image/templates/gallery.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"
           integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
           <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
+          <link rel="stylesheet" href="{{ url_for('static', filename='css/bootstrap.min.css') }}">
 </head>
 <body>
 <div class="container">
@@ -18,7 +19,7 @@
         <hr>
         <!-- class="col-lg-3 col-md-4 col-xs-6 thumb" -->
         {% for i in range(0, 10) %}
-        <div class="col-md-4">
+        <div class="col-md-3">
             <a href="/infostudent/{{i}}"><img class="img-thumbnail gallery" src=" {{url_for('send_image', filename=image_names[i])}}"></a>
         </div>
         {% endfor %}
