--- a/Investigate_Image/templates/gallery.html
+++ b/Investigate_Image/templates/gallery.html
@@ -19,8 +19,9 @@
         <hr>
         <!-- class="col-lg-3 col-md-4 col-xs-6 thumb" -->
         {% for i in range(0, amount) %}
-        <div class="col-md-3">
+        <div class="col-md-3 mx-auto d-block">
             <a href="/infostudent/{{image_names[i]}}"><img class="img-thumbnail gallery" src=" {{url_for('send_image', filename=image_names[i])}}"></a>
+            <label style="margin-left:15%">MSSV:{{lstMSSV[i]}}</label>
         </div>
         {% endfor %}
     </div>
